--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-3.49MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
-  - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.87MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-10.79MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-5.43MB/s(Youtube:不良林), server: 139.162.47.114, port: 44605, type: trojan, password: 1529baee-f263-48a4-b95b-ac0a49814268, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.71MB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-5.43MB/s(Youtube:不良林), server: 139.162.47.114, port: 44605, type: trojan, password: 1529baee-f263-48a4-b95b-ac0a49814268, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-1.59MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-10.46MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44608, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: shcu.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-354.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇭 瑞士-1.51MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇯🇵 日本-1.37MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-3.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
