--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-446.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇬🇧 英国-1.91MB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇸🇬 新加坡-9.26MB/s(Youtube:不良林), server: linsg.n.optage.moe, port: 44605, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: linsg.n.optage.moe, skip-cert-verify: true}
   - {name: 🇺🇸 美国-8.41MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.77MB/s(Youtube:不良林), server: linsg.n.optage.moe, port: 44605, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: linsg.n.optage.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-222.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 未知国家-2.52MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
-  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇨🇳 台湾-1.96MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇧🇷 巴西-437.1KB/s(Youtube:不良林), server: 138.118.175.28, port: 31320, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.92MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-9.22MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44608, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: shcu.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.32MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.53MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.9KB/s(Youtube:不良林)
-      - 未知国家-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-437.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-446.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.9KB/s(Youtube:不良林)
-      - 未知国家-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-437.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.9KB/s(Youtube:不良林)
-      - 未知国家-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-437.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-446.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.9KB/s(Youtube:不良林)
-      - 未知国家-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-437.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-446.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.9KB/s(Youtube:不良林)
-      - 未知国家-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-437.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-446.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.9KB/s(Youtube:不良林)
-      - 未知国家-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-437.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-446.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.9KB/s(Youtube:不良林)
-      - 未知国家-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-437.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
